--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@ body {
 a {
   color: black;
   text-decoration: none;
-  border-bottom: 5px solid pink;
+  border-bottom: 5px solid salmon;
 }
 
 a:visited {
@@ -20,7 +20,7 @@ a:visited {
 }
 
 a:hover {
-  background-color: pink;
+  background-color: salmon;
   color: black;
   border-color: palevioletred;
 }
